Update project cards in index.html
Removed GitHub project card and added Virtual CPU project card.

--- a/index.html
+++ b/index.html
@@ -45,25 +45,20 @@
                 <a href="https://hyrumhendrickson.com" class="btn" target="blank">Explore</a>
             </div>
 
-            <div class="card">
-                <h2>Github</h2>
-                <p>Software to keep track of my current projects.</p>
-                <a href="https://github.com/HyrumHendrickson" class="btn" target="blank">Explore</a>
-            </div>
 
             <div class="card">
-                <h2>2D Heatmap</h2>
-                <p>Webapp made to study random noise generation and modification.</p>
-                <a href="heatmap.html" class="btn" target="blank">Explore</a>
+                <h2>Virtual CPU</h2>
+                <p>Webapp that runs a very simplified virtual CPU and executes my own custom assembly lanauge.</p>
+                <a href="https://hyrumhendrickson.github.io/Virtual-CPU/" class="btn" target="blank">Explore</a>
             </div>
-
+            <!--
             <div class="card">
                 <h2>Western Humanities</h2>
                 <p>Example website to showcase my web development skills.</p>
                 <a href="https://westernhumanities.org" class="btn" target="blank">Explore</a>
             </div>
             
-            <!-- <div class="card">
+             <div class="card">
                 <h2>Bible Buddy</h2>
                 <p>Custom GPT to help with bible study and research.</p>
                 <a href="https://chatgpt.com/g/g-67bb348c25e881919e52757d73932ed6-bible-buddy" class="btn" target="blank">Explore</a>
