Update portfolio section with new project details

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             </div> -->
             
             <div class="card">
-                <h2>My Portfolio</h2>
-                <p>My professional resume website.</p>
-                <a href="https://hyrumhendrickson.com" class="btn" target="blank">Explore</a>
+                <h2>Cellular Automaton Research</h2>
+                <p>My custom webapp to study different types cellular automaton. </p>
+                <a href="https://hyrumhendrickson.github.io/cellular/" class="btn" target="blank">Explore</a>
             </div>
 
 
